--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,16 +7,14 @@ ENV PYTHONUNBUFFERED 1
 ENV POETRY_VIRTUALENVS_CREATE=false
 
 # Install system dependencies and install Poetry
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
-    && curl -sSL https://install.python-poetry.org | python3 -
+RUN pip install poetry
 
 # Add project files to the container
 WORKDIR /app
 COPY pyproject.toml poetry.lock ./
 
 # Install dependencies using Poetry
-RUN poetry install --no-dev --no-interaction --no-ansi
+RUN poetry install --without dev
 
 # Copy the entire application code
 COPY . .
