--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,5 +1,5 @@
 # Use the official Python image as the base image
-FROM python:3.10-slim
+FROM python:3.12-slim
 
 # Set environment variables to avoid Python buffering and Poetry interactive mode
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -11,13 +11,12 @@ RUN pip install poetry
 
 # Add project files to the container
 WORKDIR /app
-COPY pyproject.toml poetry.lock ./
 
-# Install dependencies using Poetry
-RUN poetry install --without dev
+COPY pyproject.toml poetry.lock ./
+RUN poetry install --without dev 
 
 # Copy the entire application code
-COPY . .
+COPY demo_inference ./demo_inference  
 
 # Expose the port (for FastAPI, typically 8000)
 EXPOSE 8000
